fixed some layout problems

--- a/src/content/assets/css/style.css
+++ b/src/content/assets/css/style.css
@@ -61,10 +61,13 @@ body {
   color: white;
 }
 
-div.content {
+.content {
   margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
+  max-width: 800px;
+  margin: 0 auto;
+  line-height: 1.6;
 }
 
 @media screen and (max-width: 700px) {
@@ -85,26 +88,35 @@ div.content {
 
 @media screen and (max-width: 600px) {
   .sidebar a {
-    text-align: center;
+    text-align: left;
     float: none;
   }
 }
 
 h2 {
   display: block;
-  font-size: 6em;
-  margin-top: 0.67em;
+  /* font-size: 6em; */
+  margin-top: 1.5rem;
   margin-bottom: 0.67em;
   margin-left: 0;
   margin-right: 0;
   font-weight: bold;
   text-shadow: 10px 10px 20px red;
-  color: Crimson;
+  /* color: Crimson; */
 }
 
 h2 {
   text-align: center;
 }
+
+h1 {
+  text-align: center;
+}
+
+.centre {
+  text-align: center;
+}
+
 
 .legal-list {
   display: inline;
@@ -118,4 +130,20 @@ h2 {
 
 .indented-content {
   padding-left: 20px; /* Adjust the value as needed */
+}
+
+p {
+  max-width: 80em;
+  margin-bottom: 1rem;
+  /*margin: 0 auto;
+  line-height: 1.6;*/
+}
+p.small-width {
+  max-width: 400px;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+
+ul {
+  margin-left: 2rem;
 }
